2010-02-21  Kuleshov Alexander  <kuleshovmail@gmail.com>

Release notes: 

- Incedit project Version 0.1.0:

 * Create new file
 * Open new file
 * Save file
 * Save as file
 * Tab system
 * Close file

- Incedit project Version 0.1.2

* show/hide toolbar
* show/hide statusbar
* copy/paste/cut/delete/select all
* saving when tab close
* About 
* Some menu prototype

2010-03-20  Kuleshov Alexander  <kuleshovmail@gmail.com>

- Incedit project Version 0.1.3

* printing support
* all bug with file saving/closing fixing
* undo/redo support
* searching support
* some toolbars exchange