@@ -7,7 +7,7 @@
 + Tab system
 + Close file
 
-- Incedit project Version 0.1.2
+- Incedit project Version 0.1.2: 2010-02-26
 
 + show/hide toolbar
 + show/hide statusbar
@@ -15,11 +15,19 @@
 + saving when tab close
 + About box
 
-- Incedit project Version 0.1.3
+- Incedit project Version 0.1.3: 2010-03-20
 
-+ Printing (Need testing!!!)
++ Printing 
 + Undo/redo
 + Find next
 + Find 
 + Bug fix saving file 
 + Bug fix closing tab 
+
+-Incedit project Version 0.1.4:
+
+- setup.py
+- toolbar all components add
+- statusbar line/row displaying
+- window title changed when new file open
+- save all file when app close
