@@ -7,7 +7,7 @@
 + Tab system
 + Close file
 
-- Incedit project Version 0.1.2
+- Incedit project Version 0.1.2: 2010-02-26
 
 + show/hide toolbar
 + show/hide statusbar
@@ -15,7 +15,7 @@
 + saving when tab close
 + About box
 
-- Incedit project Version 0.1.3
+- Incedit project Version 0.1.3: 
 
 + Printing (Need testing!!!)
 + Undo/redo
