@@ -4,7 +4,7 @@ running configure, to aid debugging if configure makes a mistake.
 It was created by incedit configure 0.1.0, which was
 generated by GNU Autoconf 2.61.  Invocation command line was
 
-  $ ./configure 
+  $ ./configure --no-create --no-recursion
 
 ## --------- ##
 ## Platform. ##
@@ -12,9 +12,9 @@ generated by GNU Autoconf 2.61.  Invocation command line was
 
 hostname = shk
 uname -m = i686
-uname -r = 2.6.26-1-686
+uname -r = 2.6.26-2-486
 uname -s = Linux
-uname -v = #1 SMP Fri Mar 13 18:08:45 UTC 2009
+uname -v = #1 Tue Mar 9 17:10:34 UTC 2010
 
 /usr/bin/uname -p = unknown
 /bin/uname -X     = unknown
@@ -27,12 +27,10 @@ uname -v = #1 SMP Fri Mar 13 18:08:45 UTC 2009
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
 
-PATH: /usr/local/sbin
 PATH: /usr/local/bin
-PATH: /usr/sbin
 PATH: /usr/bin
-PATH: /sbin
 PATH: /bin
+PATH: /usr/games
 
 
 ## ----------- ##
@@ -66,26 +64,6 @@ configure:2274: result: ${prefix}/lib/python2.5/site-packages
 configure:2283: checking for python extension module directory
 configure:2291: result: ${exec_prefix}/lib/python2.5/site-packages
 configure:2420: creating ./config.status
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by incedit config.status 0.1.0, which was
-generated by GNU Autoconf 2.61.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status 
-
-on shk
-
-config.status:618: creating Makefile
-config.status:618: creating src/Makefile
-config.status:618: creating config.h
-config.status:834: config.h is unchanged
 
 ## ---------------- ##
 ## Cache variables. ##
@@ -198,3 +176,23 @@ target_alias=''
 #define VERSION "0.1.0"
 
 configure: exit 0
+
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by incedit config.status 0.1.0, which was
+generated by GNU Autoconf 2.61.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status 
+
+on shk
+
+config.status:618: creating Makefile
+config.status:618: creating src/Makefile
+config.status:618: creating config.h
+config.status:834: config.h is unchanged
